--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,10 +9,10 @@
     <h1>Olá, Mundo!</h1>
     <Hr>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Quos commodi ad, ipsam dolorem at vitae quo consectetur maiores
-        voluptatibus aperiam similique perspiciatis reiciendis sint
-        fuga distinctio iure magnam ab recusandae?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.Quos commodi ad, ipsam dolorem at vitae quo consectetur maioresvoluptatibus aperiam similique perspiciatis reiciendis sintfuga distinctio iure magnam ab recusandae?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptate architecto voluptatum sunt, reprehenderit totam velit accusantium porro, blanditiis, tempore dolorem vitae eos repudiandae id! Deserunt nam autem eum fuga.
     </p>
 </body>
 </html>
