--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro site em repositório</title>
+    <title>Primeiro site em repositório Teste Branch</title>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <Hr>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.Quos commodi ad, ipsam dolorem at vitae quo consectetur maioresvoluptatibus aperiam similique perspiciatis reiciendis sintfuga distinctio iure magnam ab recusandae?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptate architecto voluptatum sunt, reprehenderit totam velit accusantium porro, blanditiis, tempore dolorem vitae eos repudiandae id! Deserunt nam autem eum fuga.
-    </p>
+    <main>
+        <header>
+            <h1>Título do site</h1>
+        </header>
+        <article>
+            <h2>Artigo 001</h2>
+            <p>Texto artigo 001</p>
+        </article>
+        <article>
+            <h2>Artigo 002</h2>
+            <p>Texto artigo 002</p>
+        </article>
+    </main>
 </body>
 </html>
