--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos pra fazer</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de git e github</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusamus iure beatae quas necessitatibus perferendis mollitia dicta tempora aliquid incidunt eius distinctio modi, sequi provident cumque id neque, aliquam error.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de Java</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eius fuga libero? Explicabo est doloribus et nemo eum, sequi tempora exercitationem non. Qui, illum error dolor eveniet quasi praesentium omnis.</p>
         </article>
     </main>
 </body>
