--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>Cursos pra fazer</h1>
+            <img src="estilos/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de git e github</h2>
