--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <h1>Cursos pra fazer</h1>
-            <img src="estilos/curso-em-video-cor.png" alt="Curso em Video">
+            <img class="lado" src="estilos/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de git e github</h2>
@@ -19,7 +19,7 @@
         </article>
         <article>
             <h2>Curso de Javascript</h2>
-            <img src="estilos/curso-javascript.png" alt="Curso de Javascript">
+            <img class="lado" src="estilos/curso-javascript.png" alt="Curso de Javascript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eius fuga libero? Explicabo est doloribus et nemo eum, sequi tempora exercitationem non. Qui, illum error dolor eveniet quasi praesentium omnis.</p>
         </article>
     </main>
