--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,11 +10,11 @@
     <main>
         <header>
             <h1>Cursos pra fazer</h1>
-            <img class="lado" src="estilos/curso-em-video-cor.png" alt="Curso em Video">
+            <img src="estilos/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de git e github</h2>
-            <img src="estilos/curso-html-css.png" alt="Curso HTML">
+            <img class="lado" src="estilos/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusamus iure beatae quas necessitatibus perferendis mollitia dicta tempora aliquid incidunt eius distinctio modi, sequi provident cumque id neque, aliquam error.</p>
         </article>
         <article>
