--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -13,14 +13,16 @@
             <img src="estilos/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
-            <h2>Curso de git e github</h2>
+            <h2>Curso de HTML</h2>
             <img class="lado" src="estilos/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero accusamus iure beatae quas necessitatibus perferendis mollitia dicta tempora aliquid incidunt eius distinctio modi, sequi provident cumque id neque, aliquam error.</p>
+            <p><a href="curso-html.html">Acesse o curso HTML</a></p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
             <img class="lado" src="estilos/curso-javascript.png" alt="Curso de Javascript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eius fuga libero? Explicabo est doloribus et nemo eum, sequi tempora exercitationem non. Qui, illum error dolor eveniet quasi praesentium omnis.</p>
+            <p><a href="curso-js.html">Acesse o curso de Javascript</a></p>
         </article>
     </main>
 </body>
